# honeymoney

./: .gitignore  AGENTS.md  README.md  package.json  pyproject.toml  skills-lock.json  spec-v1.md
.github/ISSUE_TEMPLATE/: agent-task.yml
.github/workflows/: ci.yml
constraints/: dev.txt
docs/: architecture.md  cli-module-boundaries.md  csv-compatibility.md  golden-datasets.md
docs/adr/: 0001-stable-transaction-identity.md  0002-local-categorization-memory.md
docs/agents/: codex.md  domain.md  issue-tracker.md
examples/: config.json  rules.json
examples/expected-output/: .honeymoney-identity-manifest.json  categorized.csv  import_report.json  review_needed.csv
honeymoney/: __init__.py  categorization_memory.py  classification_policy.py  cli.py  corrections.py  csv_artifacts.py  identity.py  identity_state.py  importers.py  normalization.py  ollama.py  persistence.py  reconciliation.py  report.py  rules.py  schema.py
plans/: 001-preserve-failed-replacements.md  002-validate-public-config.md  003-validate-profile-structure.md  004-define-empty-corrections.md  005-failure-atomic-persistence.md  006-transactional-reset.md  007-enforce-local-ollama.md  008-stable-transaction-identity.md  009-stable-source-namespace.md  010-cross-import-duplicates.md  011-optimize-duplicate-window.md  012-safe-spreadsheet-exports.md  013-pin-ci-toolchain.md  014-single-ledger-read.md  015-local-categorization-memory.md  016-profile-validation-command.md  017-extract-cli-boundaries.md  018-accounting-safe-ollama-categorization.md  README.md
scripts/: bootstrap.sh  check.sh  check_constraints.py  check_distribution.py  check_private_pdfs.py  dependency-health.sh  live_ollama_categorization_smoke.py  refresh-constraints.sh  run_tests_offline.py
tests/: golden_helpers.py  test_agent_cli.py  test_cash_flow.py  test_cash_flow_review.py  test_classification_policy.py  test_cli_bootstrap.py  test_config_cli.py  test_duplicate_performance.py  test_environment_smoke.py  test_hsbc_pdf_profiles.py  test_identity.py  test_identity_state.py  test_import_profiles.py  test_module_boundaries.py  test_offline_test_runner.py  test_ollama.py  test_ollama_transport.py  test_private_pdf_acceptance.py  test_rules.py  test_spreadsheet_safe_csv.py  test_transaction_categorization.py  test_workflow.py
(+71 files in other folders)
