[project]
name = "honeymoney"
version = "0.1.0"
description = "Local private spending categorization for household transaction exports"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
pdf = [
  "pdfplumber>=0.11.10,<0.12",
  "PyMuPDF>=1.28,<1.29",
]
dev = [
  "build>=1.2,<2",
  "pip-audit>=2.10,<3",
  "ruff>=0.12,<1",
  "setuptools>=70.1",
  "wheel>=0.45,<1",
]

[project.scripts]
honeymoney = "honeymoney.cli:run"

[tool.setuptools.packages.find]
include = ["honeymoney*"]
exclude = ["samples*", "tests*", "examples*"]

[tool.setuptools.package-data]
honeymoney = ["data/profiles/*.json"]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.ruff]
target-version = "py310"
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
